Fixed some bugs on mobile displays

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2375,13 +2375,15 @@ body p {
 @media screen and (max-width: 414px) {
     /* DASHBOARD/HOMEPAGE */
     .navbar-buttons {
-        font-size: 80%;
+        margin-top: 5%;
+        font-size: 75%;
         justify-content: left;
+        text-align: center;
     }
 
     .navbar-button {
         margin-left: 0;
-        margin-right: 7%;
+        margin-right: 4%;
     }
 
     .navbar-button-about {
@@ -2390,11 +2392,11 @@ body p {
     }
 
     #login-button {
-        margin-left: 7%;
+        margin-left: 4%;
     }
 
     .navbar-button-logout {
-        margin-left: 7%;
+        margin-left: 4%;
         margin-right: 0;
     }
 
@@ -2407,11 +2409,33 @@ body p {
     }
 
     .home-grid-featured-item {
-        grid-template-rows: 30% 13% 51% 10%;
+        grid-template-rows: 30% 13% 55% 10%;
     }
 
     .home-grid-featured {
-        padding-top: 6%;
+        padding-top: 3%;
+    }
+
+    /* LOGIN */
+    .login-container1 {
+        width: 80%;
+        height: 50%;
+        top: 27%;
+        left: 10%;
+
+    }
+
+    .signup-button-container button {
+        width: 35%;
+    }
+
+    /* SIGN UP*/
+    .signup-container {
+        width: 85%;
+        top: 10%;
+        left: 7%;
+        height: 80%;
+
     }
 
     /* FOOTER*/
